# Rustisaur

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  rustisaur.db  test_hello.rex  test_store.rex
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  cache_bench.rex  db_bench.rex  string_bench.rex
benchmarks/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  repl.rs  utils.rs
crates/cli/src/commands/: build.rs  check.rs  mod.rs  run.rs  version.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  config.rs  engine.rs  error.rs  lazy_loader.rs  lib.rs  pool.rs  runtime.rs  version.rs
crates/event-system/: Cargo.toml
crates/event-system/src/: dispatcher.rs  emitter.rs  lib.rs  listener.rs  types.rs
crates/ffi-layer/: Cargo.toml
crates/ffi-layer/src/: bindings.rs  lib.rs  wrappers.rs
crates/lua-bridge/: Cargo.toml
crates/lua-bridge/src/: async_support.rs  bindings.rs  error.rs  lib.rs  modules.rs  sandbox.rs  state.rs
crates/plugin-system/: Cargo.toml
crates/plugin-system/src/: lib.rs  loader.rs  manager.rs  registry.rs  traits.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: error.rs  lib.rs  lua_bindings.rs
crates/stdlib/src/data/: binary.rs  json.rs  mod.rs  toml.rs  yaml.rs
crates/stdlib/src/fs/: mod.rs  path.rs  read.rs  watch.rs  write.rs
crates/stdlib/src/guardian/: console.rs  core.rs  database.rs  filesystem.rs  mod.rs  network.rs  secrets.rs
crates/stdlib/src/http/: client.rs  mod.rs  server.rs
crates/stdlib/src/io/: buffer.rs  console.rs  file.rs  mod.rs
crates/stdlib/src/net/: http.rs  mod.rs  tcp.rs  udp.rs  websocket.rs
crates/stdlib/src/store/: cache.rs  db.rs  mod.rs
crates/stdlib/src/string/: functions.rs  mod.rs
crates/stdlib/src/sys/: env.rs  mod.rs  process.rs  time.rs
crates/stdlib/src/utils/: math.rs  mod.rs  string.rs  table.rs
crates/stdlib/src/websocket/: client.rs  mod.rs
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  LUA_API.md  PERFORMANCE.md  RUST_API.md  SECURITY.md  TUTORIAL.md
examples/: async_await.rs  basic_hello.rs  custom_functions.rs  event_system.rs  file_io.rs  http_client.rs
examples/rexscript_examples/: async_example.rex  discord_bot.rex  file_ops.rex  hello.rex  http_request.rex  http_server_simple.rex  http_server_test.rex  websocket_test.rex
rustisaur-vscode/: language-configuration.json  package.json  rustisaur-0.1.0.vsix
rustisaur-vscode/syntaxes/: rex.tmLanguage.json
tests/: Cargo.toml  integration_tests.rs
tests/lua_scripts/: test_basic.rex  test_io.rex
