[package]
name = "rustisaur-cli"
description = "Rustisaur command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rustisaur"
path = "src/main.rs"

[dependencies]
rustisaur-core = { workspace = true }
rustisaur-lua-bridge = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
mlua = { workspace = true }
