[package]
name = "rustisaur-stdlib"
description = "Rustisaur standard library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustisaur-lua-bridge = { workspace = true }
rustisaur-event-system = { workspace = true }
mlua = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
