[package]
name = "rustisaur-stdlib"
description = "Rustisaur standard library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustisaur-lua-bridge = { workspace = true }
rustisaur-event-system = { workspace = true }
mlua = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }

# 1. SQLite cho "Hard Tasks" (Lưu trữ bền vững, Query phức tạp)
# Tính năng "bundled" giúp tự động biên dịch SQLite vào file .exe, người dùng không cần cài đặt gì thêm!
rusqlite = { version = "0.31", features = ["bundled"] }

# 2. DashMap cho "Tốc độ phản lực" (Cache trong RAM)
# Đây là HashMap siêu nhanh, hỗ trợ đa luồng, giống hệt cách Redis lưu dữ liệu trong RAM.
dashmap = "5.5"